@@ -16,8 +16,9 @@ of a maildir mailbox (maildir-recursion config option). Added support for SHA1
 passwords, and fixed a bug in the MD5 base64 password code. By default, commit
 changes on close-after-QUIT (`Microsoft Outlook bug' workaround), with an
 option to restore the previous, correct, behaviour. Added support for
-intelligent filenames in maildirs (maildir-evaluate-filename config option).
-New authenticator auth_gdbm added.
+intelligent filenames in maildirs (maildir-evaluate-filename config option) to
+avoid calls to stat(). New authenticator auth_gdbm added. Fixed bug with PID
+file handling after HUP signals.
 
 1.5.3
 
